btsync-gui (0.3-1) unstable; urgency=low

  * Folder list will now be updated once per second
  * Application version is shown correctly

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 21 Feb 2014 15:16:22 +0100

btsync-gui (0.2-1) unstable; urgency=low

  * Improved exception handling in several situations
  * Implemented folder deletion (Closes #62)

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 21 Feb 2014 15:16:22 +0100

btsync-gui (0.1-1) unstable; urgency=low

  * First version with fully functional indicator (Closes #66),
    rudimentary application window listing folders (Closes #61) and
    and working preferences pane (Closes #65)

 -- Leo Moll <leo.moll@yeasoft.com>  Thu, 20 Feb 2014 22:39:01 +0100

btsync-gui (0.0-1) unstable; urgency=low

  * Initial revision - contains only the icons

 -- Leo Moll <leo.moll@yeasoft.com>  Sun, 16 Feb 2014 18:42:24 +0100